new classes: Status for simple user information about start, load and save activities. Vertaktoid - the main application class. it stores Context and makes it available for BindingUtils BindingUtils allows binding to the string resources
new features:
data binding: path, status, page number
status bar at the bottom of view
in time distributed storing of the application results in special temporary mei files
the mei zone tags will be enclosed in graphic tags by output

issues fixed:
MEI file not saved if only 1 image in folder - done
Crash while switching pages - done
Save opened image on exit - done
Allow to zoom further  - partially fixed by setting of static minimal dpi value in 40 (old value was 160)

--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 22
     buildToolsVersion "24.0.1"
-
+    repositories {
+        maven { url 'http://repo1.maven.org/maven2' }
+    }
     defaultConfig {
-        applicationId "zemfi.de.vertacktoid"
+        applicationId "zemfi.de.vertaktoid"
         minSdkVersion 19
         targetSdkVersion 22
         versionCode 1
@@ -16,6 +18,23 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable false
+        }
+    }
+
+    dataBinding {
+        enabled = true
+    }
+}
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.2.2'
     }
 }
 
