better performance - bitmaps will be down scaled by upload, if their resolution is greater than device resolution. big heap setting cut function for the oriented bounding boxes

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:name="zemfi.de.vertaktoid.Vertaktoid"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
+        android:largeHeap="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
