--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,6 @@ buildscript {
 }
 
 dependencies {
-
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support:design:22.2.1'
@@ -71,4 +70,5 @@ dependencies {
         exclude module: 'xercesImpl'
         exclude module: 'xml-apis'
     }
+    //compile 'com.google.guava:guava:16.0.1'
 }
