--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,18 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 28
     repositories {
-        maven { url 'http://repo1.maven.org/maven2' }
+        google()
+        mavenCentral()
+        maven { url 'https://repo.spring.io/plugins-release/' }
     }
     defaultConfig {
         applicationId "zemfi.de.vertaktoid"
         minSdkVersion 21
-        targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 28
+        versionCode 2
+        versionName "2.0"
     }
 
     signingConfigs {
@@ -44,28 +46,29 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 }
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:4.1.2'
     }
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
-    compile 'com.goebl:simplify:1.0.0'
-    compile('com.io7m.xom:xom:1.2.10'){
+    testImplementation 'junit:junit:4.13.2'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
+    implementation 'com.goebl:simplify:1.0.0'
+    implementation('com.io7m.xom:xom:1.2.10'){
         exclude module: 'xalan'
         exclude module: 'xercesImpl'
         exclude module: 'xml-apis'
