--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,10 @@ android {
     repositories {
         google()
         mavenCentral()
+        jcenter()
         maven { url 'https://repo.spring.io/plugins-release/' }
     }
+
     defaultConfig {
         applicationId "zemfi.de.vertaktoid"
         minSdkVersion 21
@@ -37,9 +39,7 @@ android {
 
     buildTypes {
         release {
-            signingConfig signingConfigs.config
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             debuggable true
@@ -48,6 +48,10 @@ android {
 
     buildFeatures {
         dataBinding = true
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -58,7 +62,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
     }
 }
 
@@ -73,5 +77,4 @@ dependencies {
         exclude module: 'xercesImpl'
         exclude module: 'xml-apis'
     }
-    //compile 'com.google.guava:guava:16.0.1'
 }
