--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 2
-        versionName "2.0"
+        versionName '3.0.0'
+        versionNameSuffix '-rc'
     }
 
     signingConfigs {
