--- a/build.gradle
+++ b/build.gradle
@@ -10,22 +10,18 @@ def keystoreProperties = new Properties()
 // Load your keystore.properties file into the keystoreProperties object.
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
-android {
-    compileSdkVersion 28
-    repositories {
-        google()
-        mavenCentral()
-        jcenter()
-        maven { url 'https://repo.spring.io/plugins-release/' }
-    }
 
+android {
+    compileSdkVersion 22
+    repositories {
+        maven { url 'http://repo1.maven.org/maven2' }
+    }
     defaultConfig {
         applicationId "zemfi.de.vertaktoid"
         minSdkVersion 21
-        targetSdkVersion 30
-        versionCode 2
-        versionName '3.0.0'
-        versionNameSuffix '-rc'
+        targetSdkVersion 22
+        versionCode 1
+        versionName "1.0"
     }
 
     signingConfigs {
@@ -39,49 +35,40 @@ android {
 
     buildTypes {
         release {
+            signingConfig signingConfigs.config
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
             debuggable true
         }
     }
 
-    buildFeatures {
-        dataBinding = true
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+    dataBinding {
+        enabled = true
     }
 }
 
 buildscript {
-    ext {
-        agp_version = '7.2.0-alpha05'
-        agp_version1 = '7.2.0-alpha05'
-        agp_version2 = '7.0.4'
-    }
     repositories {
-        google()
         jcenter()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$agp_version2"
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.13.2'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
-    implementation 'com.goebl:simplify:1.0.0'
-    implementation('com.io7m.xom:xom:1.2.10'){
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:design:22.2.1'
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
+    compile 'com.goebl:simplify:1.0.0'
+    compile('com.io7m.xom:xom:1.2.10'){
         exclude module: 'xalan'
         exclude module: 'xercesImpl'
         exclude module: 'xml-apis'
     }
-    implementation 'com.android.volley:volley:1.2.1'
-
+    //compile 'com.google.guava:guava:16.0.1'
 }
