--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="zemfi.de.vertaktoid">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 
     <application
@@ -30,8 +29,7 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:scheme="content"
-                    android:host="zemfi.de"/>
+                <data android:scheme="content" />
                 <data android:mimeType="application/octet-stream" />
                 <data android:pathPattern=".*\\.facs" />
             </intent-filter>
@@ -40,16 +38,15 @@
 
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:scheme="file"
-                    android:host="zemfi.de"/>
+                <data android:scheme="file" />
                 <data android:pathPattern=".*\\.facs" />
             </intent-filter>
             <intent-filter android:label="@string/app_name">
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.OPENABLE"/>
+                <action android:name="android.intent.action.VIEW" />
 
-                <data android:scheme="http"
-                    android:host="zemfi.de"/>
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="http" />
                 <data android:pathPattern=".*\\.facs" />
             </intent-filter>
         </activity>
