--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ android {
         mavenCentral()
         jcenter()
         maven { url 'https://repo.spring.io/plugins-release/'}
+        maven { url "https://jitpack.io" }
+
     }
 
     defaultConfig {
@@ -74,6 +76,7 @@ buildscript {
 dependencies {
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation'com.github.chathuralakmal:AndroidImagePopup:1.2.2'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.5.0'
     implementation 'com.goebl:simplify:1.0.0'
